<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.naomitaub.standuptest.LongTestActivity"
    android:background="#2E9AFE">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="#A9D0F5"
        android:textAllCaps="false"
        android:id="@+id/startTimerButtonLong"
        android:layout_alignTop="@+id/textViewTimeLong"
        android:layout_toStartOf="@+id/textViewTimeLong"
        android:layout_marginTop="51dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:background="#A9D0F5"
        android:textAllCaps="false"
        android:id="@+id/stopTimerButtonLong"
        android:layout_alignTop="@+id/startTimerButtonLong"
        android:layout_toEndOf="@+id/textViewTimeLong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerVal"
        android:id="@+id/textViewTimeLong"
        android:textSize="25sp"
        android:layout_below="@+id/longEnterHRButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Long Test"
        android:textSize="35sp"
        android:id="@+id/longTestBanner"
        android:textAlignment="center"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lie_down"
        android:id="@+id/longTestMessage"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/longTestBanner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/longTestMessageHR"
        android:layout_below="@+id/longTestMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="2"
        android:id="@+id/longHR"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textViewTimeLong" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View results"
        android:textAllCaps="false"
        android:background="#A9D0F5"
        android:padding="10dp"
        android:id="@+id/goToResultsLongButton"
        android:onClick="launchResults"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#A9D0F5"
        android:textAllCaps="false"
        android:text="@string/enter_HR"
        android:padding="10dp"
        android:id="@+id/longEnterHRButton"
        android:layout_alignTop="@+id/longHR"
        android:layout_toEndOf="@+id/textViewTimeLong" />
</RelativeLayout>
